--- a/docs/classes/$dom.component.html
+++ b/docs/classes/$dom.component.html
@@ -82,7 +82,7 @@
                     <h2 class="no-toc">Files</h2>
                 </div>
                 <div class="bd">
-                    <ul><li>src\$dom_component.js/<ul></ul></li></ul>
+                    <ul><li>src/<ul><li><a href="../files/src_$dom_component.js.html">$dom_component.js</a></li></ul></li></ul>
                 </div>
             </div>
             
@@ -90,7 +90,7 @@
 
         <div id="main" class="yui3-u">
             <div class="content"><h4>Class $dom.component</h4>
-<span class="foundat">Class defined in: <a href="../files/src_$dom_component.js.html#l42"><code>src\$dom_component.js:42</code></a></span>
+<span class="foundat">Class defined in: <a href="../files/src_$dom_component.js.html#l42"><code>src&#x2F;$dom_component.js:42</code></a></span>
 <div class="intro"><p>This 'functional class' is syntax sugar around <a href="https://developer.mozilla.org/en-US/docs/Web/API/DocumentFragment"><code>DocumentFragment</code></a> for creating DOM components and their adding to live DOM in performance friendly way.</p>
 </div>
 
@@ -100,7 +100,7 @@
     <br>
     <span class="foundat">
         
-        <a href="../files/src_$dom_component.js.html#l42"><code>src\$dom_component.js:42</code></a>
+        <a href="../files/src_$dom_component.js.html#l42"><code>src&#x2F;$dom_component.js:42</code></a>
     </span><br>
     
     <strong>Parameters:</strong>
@@ -163,7 +163,7 @@
     <br>
     <span class="foundat">
         
-        <a href="../files/src_$dom_component.js.html#l83"><code>src\$dom_component.js:83</code></a>
+        <a href="../files/src_$dom_component.js.html#l84"><code>src&#x2F;$dom_component.js:84</code></a>
     </span><br>
     <p>This add element to component</p>
 
@@ -223,7 +223,7 @@
     <br>
     <span class="foundat">
         
-        <a href="../files/src_$dom_component.js.html#l129"><code>src\$dom_component.js:129</code></a>
+        <a href="../files/src_$dom_component.js.html#l128"><code>src&#x2F;$dom_component.js:128</code></a>
     </span><br>
     <p>Method for including another component by usint its <code>share</code> key.</p>
 
@@ -248,7 +248,7 @@
     <br>
     <span class="foundat">
         
-        <a href="../files/src_$dom_component.js.html#l183"><code>src\$dom_component.js:183</code></a>
+        <a href="../files/src_$dom_component.js.html#l182"><code>src&#x2F;$dom_component.js:182</code></a>
     </span><br>
     <p>Method remove element form live DOM and returns null</p>
 
@@ -264,7 +264,7 @@ test= test.destroy();</p>
     <br>
     <span class="foundat">
         
-        <a href="../files/src_$dom_component.js.html#l207"><code>src\$dom_component.js:207</code></a>
+        <a href="../files/src_$dom_component.js.html#l206"><code>src&#x2F;$dom_component.js:206</code></a>
     </span><br>
     <p>Returns current <code>deep</code> (last element in array)</p>
 
@@ -275,7 +275,7 @@ test= test.destroy();</p>
     <br>
     <span class="foundat">
         
-        <a href="../files/src_$dom_component.js.html#l215"><code>src\$dom_component.js:215</code></a>
+        <a href="../files/src_$dom_component.js.html#l214"><code>src&#x2F;$dom_component.js:214</code></a>
     </span><br>
     <p>Initialize internal storage</p>
 
@@ -290,7 +290,7 @@ test= test.destroy();</p>
     <br>
     <span class="foundat">
         
-        <a href="../files/src_$dom_component.js.html#l315"><code>src\$dom_component.js:315</code></a>
+        <a href="../files/src_$dom_component.js.html#l314"><code>src&#x2F;$dom_component.js:314</code></a>
     </span><br>
     <p>Methods returns if it was <code>onupdate</code> used</p>
 
@@ -305,7 +305,7 @@ test= test.destroy();</p>
     <br>
     <span class="foundat">
         
-        <a href="../files/src_$dom_component.js.html#l146"><code>src\$dom_component.js:146</code></a>
+        <a href="../files/src_$dom_component.js.html#l145"><code>src&#x2F;$dom_component.js:145</code></a>
     </span><br>
     <p>Add element to live DOM</p>
 
@@ -339,7 +339,7 @@ test= test.destroy();</p>
     <br>
     <span class="foundat">
         
-        <a href="../files/src_$dom_component.js.html#l196"><code>src\$dom_component.js:196</code></a>
+        <a href="../files/src_$dom_component.js.html#l195"><code>src&#x2F;$dom_component.js:195</code></a>
     </span><br>
     <p>Updates <code>deep</code></p>
 
@@ -360,7 +360,7 @@ test= test.destroy();</p>
     <br>
     <span class="foundat">
         
-        <a href="../files/src_$dom_component.js.html#l289"><code>src\$dom_component.js:289</code></a>
+        <a href="../files/src_$dom_component.js.html#l288"><code>src&#x2F;$dom_component.js:288</code></a>
     </span><br>
     <p>Method updates all registered varibles by keys <code>onupdates</code> and calls follower functions</p>
 
