--- a/docs/classes/$dom.component.html
+++ b/docs/classes/$dom.component.html
@@ -84,7 +84,7 @@
                     <h2 class="no-toc">Files</h2>
                 </div>
                 <div class="bd">
-                    <ul><li>src/<ul><li><a href="../files/src_$dom_component.js.html">$dom_component.js</a></li></ul></li></ul>
+                    <ul><li>src\$dom_component.js/<ul></ul></li></ul>
                 </div>
             </div>
             
@@ -92,7 +92,7 @@
 
         <div id="main" class="yui3-u">
             <div class="content"><h4>Class $dom.component</h4>
-<span class="foundat">Class defined in: <a href="../files/src_$dom_component.js.html#l76"><code>src&#x2F;$dom_component.js:76</code></a></span>
+<span class="foundat">Class defined in: <a href="../files/src_$dom_component.js.html#l76"><code>src\$dom_component.js:76</code></a></span>
 <div class="intro"><p>This 'functional class' is syntax sugar around <a href="https://developer.mozilla.org/en-US/docs/Web/API/DocumentFragment"><code>DocumentFragment</code></a> for creating DOM components and their adding to live DOM in performance friendly way.</p>
 </div>
 
@@ -102,7 +102,7 @@
     <br>
     <span class="foundat">
         
-        <a href="../files/src_$dom_component.js.html#l76"><code>src&#x2F;$dom_component.js:76</code></a>
+        <a href="../files/src_$dom_component.js.html#l76"><code>src\$dom_component.js:76</code></a>
     </span><br>
     
     <strong>Parameters:</strong>
@@ -110,7 +110,7 @@
         <li>
             <code>el_name</code> <strong>&lt;String&gt;</strong>
         <ul>
-<li>Name of element (for example <code>LI</code>, <code>P</code>, <code>A</code>, ...).</li>
+<li>Name of element (for example <code>LI</code>, <code>P</code>, <code>A</code>, …).</li>
 <li>This is parent element of component.</li>
 </ul>
 
@@ -166,7 +166,7 @@
     <br>
     <span class="foundat">
         
-        <a href="../files/src_$dom_component.js.html#l118"><code>src&#x2F;$dom_component.js:118</code></a>
+        <a href="../files/src_$dom_component.js.html#l118"><code>src\$dom_component.js:118</code></a>
     </span><br>
     <p>This add element to component</p>
 
@@ -228,7 +228,7 @@
     <br>
     <span class="foundat">
         
-        <a href="../files/src_$dom_component.js.html#l170"><code>src&#x2F;$dom_component.js:170</code></a>
+        <a href="../files/src_$dom_component.js.html#l170"><code>src\$dom_component.js:170</code></a>
     </span><br>
     <p>This add element to component</p>
 
@@ -273,7 +273,7 @@
     <br>
     <span class="foundat">
         
-        <a href="../files/src_$dom_component.js.html#l202"><code>src&#x2F;$dom_component.js:202</code></a>
+        <a href="../files/src_$dom_component.js.html#l202"><code>src\$dom_component.js:202</code></a>
     </span><br>
     <p>Method for including another component by usint its <code>share</code> key.</p>
 
@@ -298,7 +298,7 @@
     <br>
     <span class="foundat">
         
-        <a href="../files/src_$dom_component.js.html#l257"><code>src&#x2F;$dom_component.js:257</code></a>
+        <a href="../files/src_$dom_component.js.html#l257"><code>src\$dom_component.js:257</code></a>
     </span><br>
     <p>Method remove element form live DOM and returns null</p>
 
@@ -314,7 +314,7 @@ test= test.destroy();</p>
     <br>
     <span class="foundat">
         
-        <a href="../files/src_$dom_component.js.html#l281"><code>src&#x2F;$dom_component.js:281</code></a>
+        <a href="../files/src_$dom_component.js.html#l281"><code>src\$dom_component.js:281</code></a>
     </span><br>
     <p>Returns parent element (or &quot;fragment pseudo element&quot;)</p>
 
@@ -325,7 +325,7 @@ test= test.destroy();</p>
     <br>
     <span class="foundat">
         
-        <a href="../files/src_$dom_component.js.html#l310"><code>src&#x2F;$dom_component.js:310</code></a>
+        <a href="../files/src_$dom_component.js.html#l310"><code>src\$dom_component.js:310</code></a>
     </span><br>
     <p>Initialize internal storage</p>
 
@@ -340,7 +340,7 @@ test= test.destroy();</p>
     <br>
     <span class="foundat">
         
-        <a href="../files/src_$dom_component.js.html#l413"><code>src&#x2F;$dom_component.js:413</code></a>
+        <a href="../files/src_$dom_component.js.html#l413"><code>src\$dom_component.js:413</code></a>
     </span><br>
     <p>Methods returns if it was <code>onupdate</code> used</p>
 
@@ -355,7 +355,7 @@ test= test.destroy();</p>
     <br>
     <span class="foundat">
         
-        <a href="../files/src_$dom_component.js.html#l220"><code>src&#x2F;$dom_component.js:220</code></a>
+        <a href="../files/src_$dom_component.js.html#l220"><code>src\$dom_component.js:220</code></a>
     </span><br>
     <p>Add element to live DOM</p>
 
@@ -389,7 +389,7 @@ test= test.destroy();</p>
     <br>
     <span class="foundat">
         
-        <a href="../files/src_$dom_component.js.html#l270"><code>src&#x2F;$dom_component.js:270</code></a>
+        <a href="../files/src_$dom_component.js.html#l270"><code>src\$dom_component.js:270</code></a>
     </span><br>
     <p>Updates <code>deep</code></p>
 
@@ -410,7 +410,7 @@ test= test.destroy();</p>
     <br>
     <span class="foundat">
         
-        <a href="../files/src_$dom_component.js.html#l289"><code>src&#x2F;$dom_component.js:289</code></a>
+        <a href="../files/src_$dom_component.js.html#l289"><code>src\$dom_component.js:289</code></a>
     </span><br>
     <p>Method provide way to change nesting behaviour. It can be helpful for loops</p>
 
@@ -441,7 +441,7 @@ test= test.destroy();</p>
     <br>
     <span class="foundat">
         
-        <a href="../files/src_$dom_component.js.html#l387"><code>src&#x2F;$dom_component.js:387</code></a>
+        <a href="../files/src_$dom_component.js.html#l387"><code>src\$dom_component.js:387</code></a>
     </span><br>
     <p>Method updates all registered varibles by keys <code>onupdates</code> and calls follower functions</p>
 
